--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         </div>
         <div>
             <p> С помощью команды whois узнать дату регистрации домена kubsu.ru и kubsudev.ru</p><br>
+            <img src="whois_kubsu.png"><br>
+            <img src="whois_kubsudev.png">
         </div>
     </body>
 </html>
