--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img src="nslookup_mx.png">
         </div>
         <div>
-            <p> С помощью команды whois узнать дату регистрации домена kubsu.ru и kubsudev.ru</p><br>
+            <p> С помощью команды whois узнать дату регистрации домена kubsu.ru и kubsu-dev.ru</p><br>
             <img src="whois_kubsu.png"><br>
             <img src="whois_kubsudev.png">
         </div>
