--- a/task_1/index.html
+++ b/task_1/index.html
@@ -9,7 +9,7 @@
             <h1>Задание 1</h1>
         </div>
         <div>
-            <p> Подключение к учебному серверу по SSH с помощью клиента Putty. С помощью команды ping узнать IP-адрес веб-сервера kubsu.ru.</p><br>
+            <p> Подключиться к учебному серверу по SSH с помощью клиента Putty. С помощью команды ping узнать IP-адрес веб-сервера kubsu.ru.</p><br>
             <img src="check_ping.png">
         </div>
         <div>
@@ -21,6 +21,10 @@
             <p> С помощью команды whois узнать дату регистрации домена kubsu.ru и kubsu-dev.ru</p><br>
             <img src="whois_kubsu.png"><br>
             <img src="whois_kubsudev.png">
+        </div>
+        <div>
+            <p> С помощью программы FileZilla соединиться с учебным сервером по протоколу FTP и скопировать на локальный компьютер файлы задания</p><br>
+            <img src="ftp_download.png">
         </div>
     </body>
 </html>
